# food-independence-simulator

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  app.py  main.py
docs/: architecture.md  roadmap.md
models/: __init__.py  climate.py  crop.py  crop_database.py  food_consumption.py  food_database.py  food_item.py  land.py  population.py  region.py
simulation/: __init__.py  simulator.py
tests/: test_main.py
ui/: __init__.py
